@@ -1,3 +1,8 @@
+2007-11-07  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tclIO.c (TclGetsObjBinary): add an efficient binary path
+	for [gets].
+
 2007-11-06  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclEncoding.c: Version of the embedded iso8859-1
